Fixes #319 Search type buttons aligned with search-bar
Search menu buttons alignment fix

Fixed alignment of results

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -74,6 +74,11 @@ a {
   font-size: small;
   color: #808080;
   padding-left: 60px;
+  margin-left: 0.3%;
+}
+
+.text-result {
+  margin-left: 2%;
 }
 
 .container-fluid{
@@ -167,7 +172,7 @@ a {
 
 #search-options {
   margin-top: 0.5%;
-  margin-left: 8.5%;
+  margin-left: 9%;
 }
 
 #search-tools {
